testsuite/tests/properties/nop_cast/test.out
test.py:12: error: Casting to the same type
Code generation was successful
Done
